dodana galeria ale nie pelni sprawna

--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -38,7 +38,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.png" /></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="images/logo.png" /></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -218,402 +218,345 @@
   <!-- GALLERY START -->
   <h2>Tiles - Nested</h2>
 	
-    <div id="gallery" style="display:none;">
+    <div id="gallery">
 
-      <a href="http://unitegallery.net">
-      <img alt="Lemon Slice"
-          src="images/thumbs/tile1.jpg"
-          data-image="images/big/tile1.jpg"
-          data-description="This is a Lemon Slice"
-          style="display:none">
-      </a>
+      <a href="#">
+        <img alt="Lemon Slice"
+             src="images/thumbs/tile1.jpg"
+             data-image="images/big/tile1.jpg"
+             data-description="This is a Lemon Slice">
+        </a>
 
-      <a href="http://unitegallery.net">
-      <img alt="Peppers"
-          src="images/thumbs/tile2.jpg"
-          data-image="images/big/tile2.jpg"
-          data-description="Those are peppers"
-          style="display:none">
-      </a>
-
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Keys"
           src="images/thumbs/tile3.jpg"
           data-image="images/big/tile3.jpg"
-          data-description="Those are keys"
-          style="display:none">
+          data-description="Those are keys">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Friuts in cup"
           src="images/thumbs/tile4.jpg"
           data-image="images/big/tile4.jpg"
-          data-description="Those are friuts in a cup"
-          style="display:none">
+          data-description="Those are friuts in a cup">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Yellow Flowers"
           src="images/thumbs/tile5.jpg"
           data-image="images/big/tile5.jpg"
-          data-description="Those are yellow flowers"
-          style="display:none">
+          data-description="Those are yellow flowers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Butterfly"
           src="images/thumbs/tile6.jpg"
           data-image="images/big/tile6.jpg"
-          data-description="This is butterfly"
-          style="display:none">
+          data-description="This is butterfly">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Boat"
           src="images/thumbs/tile7.jpg"
           data-image="images/big/tile7.jpg"
-          data-description="This is a boat"
-          style="display:none">
+          data-description="This is a boat">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Woman"
           src="images/thumbs/tile8.jpg"
           data-image="images/big/tile8.jpg"
-          data-description="This is a woman"
-          style="display:none">
+          data-description="This is a woman">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Cup Of Coffee"
           src="images/thumbs/tile9.jpg"
           data-image="images/big/tile9.jpg"
-          data-description="This is cup of coffee"
-          style="display:none">
+          data-description="This is cup of coffee">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Iphone Back"
           src="images/thumbs/tile10.jpg"
           data-image="images/big/tile10.jpg"
-          data-description="This is iphone back"
-          style="display:none">
+          data-description="This is iphone back">
       </a>
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Lemon Slice"
           src="images/thumbs/tile1.jpg"
           data-image="images/big/tile1.jpg"
-          data-description="This is a Lemon Slice"
-          style="display:none">
+          data-description="This is a Lemon Slice">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Peppers"
           src="images/thumbs/tile2.jpg"
           data-image="images/big/tile2.jpg"
-          data-description="Those are peppers"
-          style="display:none">
+          data-description="Those are peppers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Keys"
           src="images/thumbs/tile3.jpg"
           data-image="images/big/tile3.jpg"
-          data-description="Those are keys"
-          style="display:none">
+          data-description="Those are keys">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Friuts in cup"
           src="images/thumbs/tile4.jpg"
           data-image="images/big/tile4.jpg"
-          data-description="Those are friuts in a cup"
-          style="display:none">
+          data-description="Those are friuts in a cup">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Yellow Flowers"
           src="images/thumbs/tile5.jpg"
           data-image="images/big/tile5.jpg"
-          data-description="Those are yellow flowers"
-          style="display:none">
+          data-description="Those are yellow flowers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Butterfly"
           src="images/thumbs/tile6.jpg"
           data-image="images/big/tile6.jpg"
-          data-description="This is butterfly"
-          style="display:none">
+          data-description="This is butterfly">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Boat"
           src="images/thumbs/tile7.jpg"
           data-image="images/big/tile7.jpg"
-          data-description="This is a boat"
-          style="display:none">
+          data-description="This is a boat">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Woman"
           src="images/thumbs/tile8.jpg"
           data-image="images/big/tile8.jpg"
-          data-description="This is a woman"
-          style="display:none">
+          data-description="This is a woman">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Cup Of Coffee"
           src="images/thumbs/tile9.jpg"
           data-image="images/big/tile9.jpg"
-          data-description="This is cup of coffee"
-          style="display:none">
+          data-description="This is cup of coffee">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Iphone Back"
           src="images/thumbs/tile10.jpg"
           data-image="images/big/tile10.jpg"
-          data-description="This is iphone back"
-          style="display:none">
+          data-description="This is iphone back">
       </a>
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Lemon Slice"
           src="images/thumbs/tile1.jpg"
           data-image="images/big/tile1.jpg"
-          data-description="This is a Lemon Slice"
-          style="display:none">
+          data-description="This is a Lemon Slice">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Peppers"
           src="images/thumbs/tile2.jpg"
           data-image="images/big/tile2.jpg"
-          data-description="Those are peppers"
-          style="display:none">
+          data-description="Those are peppers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Keys"
           src="images/thumbs/tile3.jpg"
           data-image="images/big/tile3.jpg"
-          data-description="Those are keys"
-          style="display:none">
+          data-description="Those are keys">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Friuts in cup"
           src="images/thumbs/tile4.jpg"
           data-image="images/big/tile4.jpg"
-          data-description="Those are friuts in a cup"
-          style="display:none">
+          data-description="Those are friuts in a cup">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Yellow Flowers"
           src="images/thumbs/tile5.jpg"
           data-image="images/big/tile5.jpg"
-          data-description="Those are yellow flowers"
-          style="display:none">
+          data-description="Those are yellow flowers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Butterfly"
           src="images/thumbs/tile6.jpg"
           data-image="images/big/tile6.jpg"
-          data-description="This is butterfly"
-          style="display:none">
+          data-description="This is butterfly">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Boat"
           src="images/thumbs/tile7.jpg"
           data-image="images/big/tile7.jpg"
-          data-description="This is a boat"
-          style="display:none">
+          data-description="This is a boat">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Woman"
           src="images/thumbs/tile8.jpg"
           data-image="images/big/tile8.jpg"
-          data-description="This is a woman"
-          style="display:none">
+          data-description="This is a woman">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Cup Of Coffee"
           src="images/thumbs/tile9.jpg"
           data-image="images/big/tile9.jpg"
-          data-description="This is cup of coffee"
-          style="display:none">
+          data-description="This is cup of coffee">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Iphone Back"
           src="images/thumbs/tile10.jpg"
           data-image="images/big/tile10.jpg"
-          data-description="This is iphone back"
-          style="display:none">
+          data-description="This is iphone back">
       </a>
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Lemon Slice"
           src="images/thumbs/tile1.jpg"
           data-image="images/big/tile1.jpg"
-          data-description="This is a Lemon Slice"
-          style="display:none">
+          data-description="This is a Lemon Slice">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Peppers"
           src="images/thumbs/tile2.jpg"
           data-image="images/big/tile2.jpg"
-          data-description="Those are peppers"
-          style="display:none">
+          data-description="Those are peppers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Keys"
           src="images/thumbs/tile3.jpg"
           data-image="images/big/tile3.jpg"
-          data-description="Those are keys"
-          style="display:none">
+          data-description="Those are keys">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Friuts in cup"
           src="images/thumbs/tile4.jpg"
           data-image="images/big/tile4.jpg"
-          data-description="Those are friuts in a cup"
-          style="display:none">
+          data-description="Those are friuts in a cup">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Yellow Flowers"
           src="images/thumbs/tile5.jpg"
           data-image="images/big/tile5.jpg"
-          data-description="Those are yellow flowers"
-          style="display:none">
+          data-description="Those are yellow flowers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Butterfly"
           src="images/thumbs/tile6.jpg"
           data-image="images/big/tile6.jpg"
-          data-description="This is butterfly"
-          style="display:none">
+          data-description="This is butterfly">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Boat"
           src="images/thumbs/tile7.jpg"
           data-image="images/big/tile7.jpg"
-          data-description="This is a boat"
-          style="display:none">
+          data-description="This is a boat">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Woman"
           src="images/thumbs/tile8.jpg"
           data-image="images/big/tile8.jpg"
-          data-description="This is a woman"
-          style="display:none">
+          data-description="This is a woman">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Cup Of Coffee"
           src="images/thumbs/tile9.jpg"
           data-image="images/big/tile9.jpg"
-          data-description="This is cup of coffee"
-          style="display:none">
+          data-description="This is cup of coffee">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Iphone Back"
           src="images/thumbs/tile10.jpg"
           data-image="images/big/tile10.jpg"
-          data-description="This is iphone back"
-          style="display:none">
+          data-description="This is iphone back">
       </a>
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Lemon Slice"
           src="images/thumbs/tile1.jpg"
           data-image="images/big/tile1.jpg"
-          data-description="This is a Lemon Slice"
-          style="display:none">
+          data-description="This is a Lemon Slice">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Peppers"
           src="images/thumbs/tile2.jpg"
           data-image="images/big/tile2.jpg"
-          data-description="Those are peppers"
-          style="display:none">
+          data-description="Those are peppers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Keys"
           src="images/thumbs/tile3.jpg"
           data-image="images/big/tile3.jpg"
-          data-description="Those are keys"
-          style="display:none">
+          data-description="Those are keys">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Friuts in cup"
           src="images/thumbs/tile4.jpg"
           data-image="images/big/tile4.jpg"
-          data-description="Those are friuts in a cup"
-          style="display:none">
+          data-description="Those are friuts in a cup">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Yellow Flowers"
           src="images/thumbs/tile5.jpg"
           data-image="images/big/tile5.jpg"
-          data-description="Those are yellow flowers"
-          style="display:none">
+          data-description="Those are yellow flowers">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Butterfly"
           src="images/thumbs/tile6.jpg"
           data-image="images/big/tile6.jpg"
-          data-description="This is butterfly"
-          style="display:none">
+          data-description="This is butterfly">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Boat"
           src="images/thumbs/tile7.jpg"
           data-image="images/big/tile7.jpg"
-          data-description="This is a boat"
-          style="display:none">
+          data-description="This is a boat">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Woman"
           src="images/thumbs/tile8.jpg"
           data-image="images/big/tile8.jpg"
-          data-description="This is a woman"
-          style="display:none">
+          data-description="This is a woman">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Cup Of Coffee"
           src="images/thumbs/tile9.jpg"
           data-image="images/big/tile9.jpg"
-          data-description="This is cup of coffee"
-          style="display:none">
+          data-description="This is cup of coffee">
       </a>
 
-      <a href="http://unitegallery.net">
+      <a href="#">
       <img alt="Iphone Back"
           src="images/thumbs/tile10.jpg"
           data-image="images/big/tile10.jpg"
-          data-description="This is iphone back"
-          style="display:none">
+          data-description="This is iphone back">
       </a>
 
         
