blad z wersja naprawiony mam nadzieje ;)

--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -212,7 +212,7 @@
   <!-- Realizacje Section -->
   <section id="realizacje" class="content-section text-center">
     <div class="container">
-      <div class="col-lg-8 mx-auto">
+      
         <h1>Realizacje</h1>
         <div>
   <!-- GALLERY START -->
@@ -593,9 +593,10 @@
   </section>
 
   <!-- Bootstrap core JavaScript -->
+
   <script src="vendor/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.ba-cond.min.js"></script>
   <script type="text/javascript" src="js/jquery.slitslider.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
