dane tel-adresowe

--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -657,6 +657,19 @@
           <h1>Kontakt</h1>
           <div class="row">
             <div class="col-lg-6">
+							<section id="dane">
+								<ul>
+									<li>
+										<i class="fa fa-home"></i>Adres: ul. Siedlecka 177, Strzała, woj. Mazowieckie w pobliżu miejscowości Siedlce
+									</li>
+									<li>
+										<i class="fa fa-phone"></i>(25) 633-34-47, 606132491
+									</li>
+									<li>
+										<i class="fa fa-envelope"></i><a href="#">biuro@c-m-s.pl</a>
+								</li>
+							</ul>
+							</section>
               #Tu Dane teleadresowe jak tu: http://c-m-s.pl/
             </div>
             <div class="col-lg-6">
