--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -659,7 +659,7 @@
             <div class="col-lg-6">
 							<section id="dane">
 								<ul>
-									<li>
+									<li class="one">
 										<i class="fa fa-home"></i>Adres: ul. Siedlecka 177, Strzała, woj. Mazowieckie w pobliżu miejscowości Siedlce
 									</li>
 									<li>
