--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -674,7 +674,9 @@
             </div>
     			<div class="col-lg-6">
 	<!-- Map Section -->
-						<div id="map"></div>
+						<div class="map">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2445.388431376881!2d22.252676215962026!3d52.199988367647656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471f5b6ac9d100b7%3A0x50410a4eb3b6f3a2!2sSiedlecka%2C+08-119+Strza%C5%82a!5e0!3m2!1spl!2spl!4v1512390642368" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</div>
 							
 						
   					</div>
