--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -11,8 +11,8 @@
   <title>CMS - Centrum Mebli Sklepowych</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	
 	<!-- Custom fonts for this template -->
 	
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -226,10 +226,25 @@
     <div class="container">
       <div class="col-lg-8 mx-auto">
         <h1>Raty</h1>
-					<div>
-						#miejsce na raty
-					</div>
+						<img src="images/raty.png">
+							<h3>Maksimum korzysci</h3>
+								<ul class="benefit">
+									<li><b>wygoda</b> - kredyt bez wychodzenia z domu</li>
+									<li>rata dopasowana do Twoich możliwości</li>
+									<li>nie wymagamy wpłaty własnej</li>
+									<li>możemy rozłożyć kredyt nawet na 50 równych rat miesięcznych</li>
+									<li>kwota kredytu do 50 000 PLN</li>
+									<li>nie wymagamy ubezpieczenia towaru</li>
+									<li>otrzymasz fakturę na pełną kwotę zakupu i od razu możesz odliczyć cały koszt zakupu</li>
+									<li>możesz kupić towar droższy i lepszej jakości</li>
+									<li>kupując upragniony towar na raty, oszczędności możesz przeznaczyć na inny cel</li>
+								</ul>
+						<img src="images/raty2.png">
 			</div>
+			<aside>
+				<p3>Pod ratami proszę wpisać </p3><br>
+				<p3>Do kontaktu : Robert Wicenciak 504-042-227 </p3>
+			</aside>
     </div>
   </div>
   </section>
@@ -690,8 +705,6 @@
   <script src="js/unitegallery.min.js"></script>
 	<script src="js/ug-theme-tiles.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-	
-
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	
 	<script src="https://use.fontawesome.com/aa95071b26.js"></script>
