raty css poprawki

--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -240,11 +240,11 @@
 									<li>kupując upragniony towar na raty, oszczędności możesz przeznaczyć na inny cel</li>
 								</ul>
 						<img src="images/raty2.png">
-			</div>
-			<aside>
-				<p3>Pod ratami proszę wpisać </p3><br>
-				<p3>Do kontaktu : Robert Wicenciak 504-042-227 </p3>
-			</aside>
+							<ul class="bottom">
+								<li>Pod ratami proszę wpisać </li>
+								<li>Do kontaktu : Robert Wicenciak 504-042-227</li>
+							</ul>
+			</div>	
     </div>
   </div>
   </section>
