dodane zdjcienie i ostylowanie sekcji  o nas

--- a/cms-master/index.html
+++ b/cms-master/index.html
@@ -162,8 +162,9 @@
   <section id="o-nas" class="content-section text-center">
     <div class="container">
       <div class="row">
-        <div class="">
+        <div class="intro">
           <h1>O nas</h1>
+            <img src="images/zdjecie-budynku.jpg">
           <p>
             Witamy serdecznie na stronie firmy „CMS” Centrum Mebli Sklepowych z siedzibą w Strzale obok Siedlec. W 2008 r rozpoczęliśmy działalność na terenie kraju i do chwili obecnej rozwijamy się dynamicznie. Różnorodność świadczonych usług i oferowanych towarów
             oraz profesjonalna fachowa obsługa pozwala nam na zaspokojenie indywidualnych potrzeb każdego klienta w dziedzinie wyposażenia sklepów rożnych branż w tym również magazynów, biur i gastronomi oraz mebli kuchennych pod wymiar . W swojej ofercie
@@ -209,7 +210,7 @@
                   <p>Produkowane urządzenia chłodnicze wytwarzane są za pomocą najnowszych technologii</p>
                   <p>Wszystkie urządzenia chłodnicze posiadają gwarancję producenta.</p>
                   </div>
-                <div role="tabpanel" class="tab-pane" id="Gastronomia">
+                <div role="tabpanel" class="tab-pane" id="gastronomia">
                   <p>Oferujemy produkty renomowanych i znanych producentów z polski i zagranicy do wyposażenia w obiektach gastronomicznych:</p>
                   <ul>
                     <li>Hotelach  i sieciach hotelowych</li>
