--- a/cwiczenia/index.html
+++ b/cwiczenia/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.pagepiling.css" />
+
 </head>
 
 <body>
@@ -23,123 +24,64 @@
 			<a href="#page1">Home</a>
 		</li>
 		<li data-menuanchor="page2">
-			<a href="#page2">Galeria</a>
+			<a href="#page2">O nas</a>
 		</li>
 		<li data-menuanchor="page3">
-			<a href="#page3">O nas</a>
+			<a href="#page3">Galeria</a>
 		</li>
 		<li data-menuanchor="page4">
 			<a href="#page4">Kontakt</a>
-		</li>
-		<li data-menuanchor="page5">
-			<a href="#page5">Cos jeszcze</a>
 		</li>
 	</ul>
 
 
 	<div id="pagepiling">
 		<div class="section" id="section1">
-			<!--CAROUSEL-->
-			<div class="carousel">
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img class="d-block w-100" src="http://via.placeholder.com/550x350" alt="First slide">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>First slide label</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" src="http://via.placeholder.com/550x350" alt="Second slide">
-							<div class="carousel-caption d-none d-md-block">
-								<section>
-									<h3>Second slide label</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-								</section>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" src="http://via.placeholder.com/550x350" alt="Third slide">
-							<div class="carousel-caption d-none d-md-block">
-								<section>
-									<h3>Third slide label</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-								</section>
-							</div>
-						</div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-			</div>
+			<!--HEADER-->
+			<header class="codrops-header">
+				<svg xmlns="http://www.w3.org/2000/svg" width="1000px" height="300px" class="polaroid" preserveAspectRatio="xMidYMid meet"
+				    viewBox="0 0 1000 300">
+					<g transform="rotate(-9.424738883972168 131.13208007812517,131.28302001953134) ">
+						<rect id="svg_6" height="194.264154" width="194.264154" y="34.15094" x="34" />
+						<rect id="svg_7" height="116.226417" width="152.754719" y="56.566035" x="54.754717" />
+					</g>
+					<rect id="svg_2" height="0" width="1" y="108" x="123" stroke-width="10" stroke="#000000" fill="#ffffff" />
+					<g id="svg_10" transform="rotate(8.810273170471191 211.13208007812494,164.28302001953114) ">
+						<rect id="svg_11" height="194.264154" width="194.264154" y="67.15094" x="114" />
+						<rect id="svg_12" height="116.226417" width="152.754719" y="89.566035" x="134.754717" />
+					</g>
+					<g id="svg_13" transform="rotate(-14.838730812072754 350.132080078125,168.28302001953125) ">
+						<rect id="svg_14" height="194.264154" width="194.264154" y="71.15094" x="253" />
+						<rect id="svg_15" height="116.226417" width="152.754719" y="93.566035" x="273.754717" />
+					</g>
+					<g id="svg_16" transform="rotate(-1.4553210735321045 476.1320800781219,121.28302001953003) ">
+						<rect id="svg_17" height="194.264154" width="194.264154" y="24.15094" x="379" />
+						<rect id="svg_18" height="116.226417" width="152.754719" y="46.566035" x="399.754717" />
+					</g>
+					<g id="svg_19" transform="rotate(-4.776742458343506 556.1320800781244,176.28302001953122) ">
+						<rect id="svg_20" height="194.264154" width="194.264154" y="79.15094" x="459" />
+						<rect id="svg_21" height="116.226417" width="152.754719" y="101.566035" x="479.754717" />
+					</g>
+					<g id="svg_22" transform="rotate(17.17530059814453 690.1320800781251,163.2830200195312) ">
+						<rect id="svg_23" height="194.264154" width="194.264154" y="66.15094" x="593" />
+						<rect id="svg_24" height="116.226417" width="152.754719" y="88.566035" x="613.754717" />
+					</g>
+					<g id="svg_25" transform="rotate(-9.506031036376953 771.132080078125,177.28302001953094) ">
+						<rect id="svg_26" height="194.264154" width="194.264154" y="80.15094" x="674" />
+						<rect id="svg_27" height="116.226417" width="152.754719" y="102.566035" x="694.754717" />
+					</g>
+					<g id="svg_28" transform="rotate(19.351133346557617 862.1320800781251,137.28302001953148) ">
+						<rect id="svg_29" height="194.264154" width="194.264154" y="40.15094" x="765" />
+						<rect id="svg_30" height="116.226417" width="152.754719" y="62.566035" x="785.754717" />
+					</g>
+					</g>
+				</svg>
+				<h1>Scattered Polaroids Gallery
+					<span>A flat-style take on a Polaroid gallery</span>
+				</h1>
+			</header>
 
-			<div id="photos" class="container-fluid">
-				<ul id="photo-gallery">
-					<li>
-						<a href="https://41.media.tumblr.com/0390d80d6c8cc4a7096033182a4bfe8a/tumblr_ndyvukSjNl1tubinno1_1280.jpg">
-							<img src="https://41.media.tumblr.com/0390d80d6c8cc4a7096033182a4bfe8a/tumblr_ndyvukSjNl1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://40.media.tumblr.com/bbe414414f4fd1f0b4886c6fcf4193de/tumblr_ndyvd3qoiL1tubinno1_1280.jpg">
-							<img src="https://40.media.tumblr.com/bbe414414f4fd1f0b4886c6fcf4193de/tumblr_ndyvd3qoiL1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://41.media.tumblr.com/3dde93f097de5e9db4f11b67729d6a2e/tumblr_na06dk1vWM1tubinno1_1280.jpg">
-							<img src="https://41.media.tumblr.com/3dde93f097de5e9db4f11b67729d6a2e/tumblr_na06dk1vWM1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://40.media.tumblr.com/e67b59d43c79c496b6fa8f1dddabef47/tumblr_nbc7zx6vJl1tubinno1_1280.jpg">
-							<img src="https://40.media.tumblr.com/e67b59d43c79c496b6fa8f1dddabef47/tumblr_nbc7zx6vJl1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://40.media.tumblr.com/d94d2a63ab509f403111c6e8ebfc22a4/tumblr_ndyfu61hzH1tubinno1_1280.jpg">
-							<img src="https://40.media.tumblr.com/d94d2a63ab509f403111c6e8ebfc22a4/tumblr_ndyfu61hzH1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://40.media.tumblr.com/d7a014af6eaec53ccdc7a4171033f96d/tumblr_na06t4fnlI1tubinno1_1280.jpg">
-							<img src="https://40.media.tumblr.com/d7a014af6eaec53ccdc7a4171033f96d/tumblr_na06t4fnlI1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg">
-							<img src="https://40.media.tumblr.com/7302cf024c924726c6ad99bb80b0be41/tumblr_nauccbKUCw1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://41.media.tumblr.com/fddb3f2b0bdf390efd7ea87372e75fa5/tumblr_ndyg3pYbKW1tubinno1_1280.jpg">
-							<img src="https://41.media.tumblr.com/fddb3f2b0bdf390efd7ea87372e75fa5/tumblr_ndyg3pYbKW1tubinno1_1280.jpg">
-						</a>
-					</li>
-					<li>
-						<a href="https://41.media.tumblr.com/758a5cb9046fde53138ad0f55527ca25/tumblr_ndyfdoR6Wp1tubinno1_1280.jpg">
-							<img src="https://41.media.tumblr.com/758a5cb9046fde53138ad0f55527ca25/tumblr_ndyfdoR6Wp1tubinno1_1280.jpg">
-						</a>
-					</li>
-				</ul>
-			</div>
-			<!--GALLERY END -->
-
-		</div>
-
-		<div class="section">
-
+			<!--GALLERY-->
 			<section id="photostack-1" class="photostack photostack-start">
 				<div>
 					<figure>
@@ -272,53 +214,28 @@
 					</figure>
 				</div>
 			</section>
+			<!--GALLERY END-->
+		</div>
 
-			<section class="description">
-				<p>The last example
-					<strong>does not require a click</strong> on the gallery to initiate the first shuffling.</p>
-				<svg xmlns="http://www.w3.org/2000/svg" width="400px" height="100px" class="polaroid" preserveAspectRatio="xMidYMid meet"
-				    viewBox="0 0 1000 300">
-					<g transform="rotate(-9.424738883972168 131.13208007812517,131.28302001953134) ">
-						<rect id="svg_6" height="194.264154" width="194.264154" y="34.15094" x="34" />
-						<rect id="svg_7" height="116.226417" width="152.754719" y="56.566035" x="54.754717" />
-					</g>
-					<rect id="svg_2" height="0" width="1" y="108" x="123" stroke-width="10" stroke="#000000" fill="#ffffff" />
-					<g id="svg_10" transform="rotate(8.810273170471191 211.13208007812494,164.28302001953114) ">
-						<rect id="svg_11" height="194.264154" width="194.264154" y="67.15094" x="114" />
-						<rect id="svg_12" height="116.226417" width="152.754719" y="89.566035" x="134.754717" />
-					</g>
-					<g id="svg_13" transform="rotate(-14.838730812072754 350.132080078125,168.28302001953125) ">
-						<rect id="svg_14" height="194.264154" width="194.264154" y="71.15094" x="253" />
-						<rect id="svg_15" height="116.226417" width="152.754719" y="93.566035" x="273.754717" />
-					</g>
-					<g id="svg_16" transform="rotate(-1.4553210735321045 476.1320800781219,121.28302001953003) ">
-						<rect id="svg_17" height="194.264154" width="194.264154" y="24.15094" x="379" />
-						<rect id="svg_18" height="116.226417" width="152.754719" y="46.566035" x="399.754717" />
-					</g>
-					<g id="svg_19" transform="rotate(-4.776742458343506 556.1320800781244,176.28302001953122) ">
-						<rect id="svg_20" height="194.264154" width="194.264154" y="79.15094" x="459" />
-						<rect id="svg_21" height="116.226417" width="152.754719" y="101.566035" x="479.754717" />
-					</g>
-					<g id="svg_22" transform="rotate(17.17530059814453 690.1320800781251,163.2830200195312) ">
-						<rect id="svg_23" height="194.264154" width="194.264154" y="66.15094" x="593" />
-						<rect id="svg_24" height="116.226417" width="152.754719" y="88.566035" x="613.754717" />
-					</g>
-					<g id="svg_25" transform="rotate(-9.506031036376953 771.132080078125,177.28302001953094) ">
-						<rect id="svg_26" height="194.264154" width="194.264154" y="80.15094" x="674" />
-						<rect id="svg_27" height="116.226417" width="152.754719" y="102.566035" x="694.754717" />
-					</g>
-					<g id="svg_28" transform="rotate(19.351133346557617 862.1320800781251,137.28302001953148) ">
-						<rect id="svg_29" height="194.264154" width="194.264154" y="40.15094" x="765" />
-						<rect id="svg_30" height="116.226417" width="152.754719" y="62.566035" x="785.754717" />
-					</g>
-					</g>
-				</svg>
-				<p>The
-					<strong>dummy items</strong> show how to fill the container with Polaroids without actually making them part of the viewable
-					gallery. This can be useful when wanting to show just a specific subset of a collection.</p>
-				<p>All Polaroids in this use case have a description on the back side, which can be viewed by clicking the navigation dot
-					again.
-				</p>
+		<div class="section" id="section2">
+			<section>
+				<h2>O nas</h2>
+				<article><p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra est quis felis pellentesque, nec fringilla leo
+					condimentum. Vestibulum accumsan odio at ornare luctus. Integer consequat hendrerit odio quis gravida. Aenean ac enim
+					vel nisl feugiat elementum et condimentum neque. Sed mollis magna et turpis consectetur, sit amet pulvinar orci convallis.
+					Sed ut nisl sed justo pharetra elementum sit amet sed enim. Vestibulum vehicula arcu non gravida eleifend. Aliquam convallis
+					ipsum et diam ultricies lobortis. Vivamus eu auctor ligula, sit amet sollicitudin lorem. Integer posuere lacus lacus,
+					ut dapibus enim interdum quis. Donec tristique quis ipsum eget euismod. Ut vulputate viverra augue at tempus. Nullam
+					rhoncus nulla ut tellus vehicula, et lacinia nibh iaculis. Fusce tincidunt orci a urna porta, a feugiat purus iaculis.
+					Nunc ornare augue id lacus fringilla fermentum. Fusce iaculis diam sapien, in dapibus est iaculis fermentum. Donec et
+					velit aliquam, gravida ligula sed, venenatis sem. Vestibulum commodo at augue et pretium. Morbi congue dapibus ex, vitae
+					vulputate augue. Phasellus vehicula diam vel enim sodales aliquam. Praesent ut semper sem. Nullam ac ultrices eros.
+					Proin at aliquet arcu. Suspendisse dapibus aliquet nisi, at tincidunt ex feugiat vel. Duis nec orci purus. In nec sollicitudin
+					enim. Sed nisl tortor, tristique id felis eu, tempor suscipit lectus. Duis sit amet molestie ipsum. Ut ac aliquet massa,
+					ac auctor enim. Suspendisse porta varius enim, sed tincidunt nibh egestas id. Aenean finibus quam vitae est fringilla
+					congue. Donec nisl ex, mattis at pretium vel, porta nec sem. Quisque tempus ac enim et lacinia. Sed id iaculis lorem.
+					Nulla efficitur mi ac volutpat congue. Integer vehicula mollis eros, a tincidunt lorem dictum vel. Donec fringilla posuere
+					nisl, et vulputate massa dictum vitae.</p1></article>
 			</section>
 
 		</div>
@@ -330,19 +247,16 @@
 
 		</div>
 
-		<div class="section" id="section5">
-
-		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
 	    crossorigin="anonymous"></script>
-	
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-		crossorigin="anonymous"></script>
-		
+	    crossorigin="anonymous"></script>
+
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-	crossorigin="anonymous"></script>
+	    crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="js/jquery.pagepiling.min.js"></script>
 
@@ -350,7 +264,7 @@
 	<script src="js/modernizr.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/photostack.js"></script>
-	<script src="js/script2.js"></script>
+
 
 	<script>
 		// [].slice.call( document.querySelectorAll( '.photostack' ) ).forEach( function( el ) { new Photostack( el ); } );
